force-app/main/default/objects/Partner_Agency__c/Partner_Agency__c.object-meta.xml
<CustomObject>
    <label>Partner Agency</label>
    <nameField>
        <label>Partner Agency Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Agencies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>