force-app/main/default/objects/Partner_Agency__c/fields/Agency_Address__c.field-meta.xml
<CustomField>
    <fullName>Agency_Address__c</fullName>
    <label>Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>