force-app/main/default/objects/Partner_Agency__c/fields/Agency_City__c.field-meta.xml
<CustomField>
    <fullName>Agency_City__c</fullName>
    <label>City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>