force-app/main/default/objects/Partner_Agency__c/fields/Agency_Contact__c.field-meta.xml
<CustomField>
    <fullName>Agency_Contact__c</fullName>
    <label>Contact at Agency</label>
    <length>100</length>
    <type>Text</type>
</CustomField>