force-app/main/default/objects/Partner_Agency__c/fields/Agency_County__c.field-meta.xml
<CustomField>
    <fullName>Agency_County__c</fullName>
    <label>County</label>
    <type>TextArea</type>
</CustomField>