force-app/main/default/objects/Partner_Agency__c/fields/Agency_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>Agency_Type_Code__c</fullName>
    <label>Agency Type Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CAREER</fullName>
            </value>
            <value>
                <fullName>ABUSE</fullName>
            </value>
            <value>
                <fullName>CHURCH</fullName>
            </value>
            <value>
                <fullName>CDC</fullName>
            </value>
            <value>
                <fullName>HEALTH</fullName>
            </value>
            <value>
                <fullName>OUTREACH</fullName>
            </value>
            <value>
                <fullName>CRISIS</fullName>
            </value>
            <value>
                <fullName>DISAB</fullName>
            </value>
            <value>
                <fullName>DOMV</fullName>
            </value>
            <value>
                <fullName>CHILD</fullName>
            </value>
            <value>
                <fullName>EDU</fullName>
            </value>
            <value>
                <fullName>FAMILY</fullName>
            </value>
            <value>
                <fullName>FOOD</fullName>
            </value>
            <value>
                <fullName>GOVT</fullName>
            </value>
            <value>
                <fullName>HEADSTART</fullName>
            </value>
            <value>
                <fullName>HOMEVISIT</fullName>
            </value>
            <value>
                <fullName>HOMELESS</fullName>
            </value>
            <value>
                <fullName>INFPAN</fullName>
            </value>
            <value>
                <fullName>PREG</fullName>
            </value>
            <value>
                <fullName>REF</fullName>
            </value>
            <value>
                <fullName>TREAT</fullName>
            </value>
            <value>
                <fullName>WIC</fullName>
            </value>
            <value>
                <fullName>OTHER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>