force-app/main/default/objects/Partner_Agency__c/fields/Agency_Type_Other__c.field-meta.xml
<CustomField>
    <fullName>Agency_Type_Other__c</fullName>
    <label>Agency Type Other</label>
    <type>TextArea</type>
</CustomField>