force-app/main/default/objects/Partner_Agency__c/fields/Agency_Website__c.field-meta.xml
<CustomField>
    <fullName>Agency_Website__c</fullName>
    <label>Website</label>
    <type>Url</type>
</CustomField>