force-app/main/default/objects/Partner_Agency__c/fields/Agency_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Agency_Zip_Code__c</fullName>
    <label>Zip Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>