force-app/main/default/objects/Partner_Agency__c/fields/Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Record_ID__c</fullName>
    <displayFormat>PA-{00000}</displayFormat>
    <inlineHelpText>Partner Agency Record ID number</inlineHelpText>
    <label>PA Record ID</label>
    <type>AutoNumber</type>
</CustomField>