force-app/main/default/objects/Partner_Agency__c/fields/Zipcodes_of_Clients_Served__c.field-meta.xml
<CustomField>
    <fullName>Zipcodes_of_Clients_Served__c</fullName>
    <inlineHelpText>Do not include any punctuation.</inlineHelpText>
    <label>Zipcodes of Clients Served</label>
    <type>TextArea</type>
</CustomField>