force-app/main/default/objects/Partner_Agency__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Account__c</columns>
    <columns>NAME</columns>
    <columns>Agency_Type_Code__c</columns>
    <columns>Agency_Address__c</columns>
    <columns>Agency_City__c</columns>
    <columns>Agency_State__c</columns>
    <columns>Agency_Zip_Code__c</columns>
    <columns>Agency_Website__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>Record_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>