force-app/main/default/objects/Partner_Agency__c/listViews/New_Jersey_Coalition.listView-meta.xml
<ListView>
    <fullName>New_Jersey_Coalition</fullName>
    <columns>Account__c</columns>
    <columns>NAME</columns>
    <columns>Agency_Type_Code__c</columns>
    <columns>Agency_Address__c</columns>
    <columns>Agency_City__c</columns>
    <columns>Agency_State__c</columns>
    <columns>Agency_Zip_Code__c</columns>
    <columns>Agency_Website__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Agency_State__c</field>
        <operation>equals</operation>
        <value>NJ</value>
    </filters>
    <label>New Jersey</label>
</ListView>